test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxtest-deployment
  labels:
    app: nginxtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxtest
  template:
    metadata:
      labels:
        app: nginxtest
    spec:
      containers:
        - name: nginxtest
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxtest
spec:
  selector:
    app: nginxtest
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxtest
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
      - app.${DOMAIN}
    secretName: nginxtest-tls
  rules:
  - host: app.${DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginxtest
            port:
              number: 8080
